--- a/main.css
+++ b/main.css
@@ -3,3 +3,15 @@ footer {
   padding-bottom: 1em;
   background-color: aliceblue;
 }
+
+#red label{
+  color: red;
+}
+
+#green label{
+  color: green;
+}
+
+#blue label{
+  color: blue;
+}
