--- a/main.css
+++ b/main.css
@@ -4,14 +4,14 @@ footer {
   background-color: aliceblue;
 }
 
-#red label{
+#red-label{
   color: red;
 }
 
-#green label{
+#green-label{
   color: green;
 }
 
-#blue label{
+#blue-label{
   color: blue;
 }
